# capnp-rpc-demo

./: .gitignore  capnp-rpc-demo.opam  client.ml  dune  echo.ml  flake.nix  main.ml  pipe.ml  server.ml
