opam-version: "2.0"
depends: [
  "ocaml" {>= "4.08.0"}
  "eio_main"
  "capnp-rpc-lwt"
  "logs"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/RyanGibb/aeon.git"
pin-depends: [
  # https://github.com/mirage/capnp-rpc/pull/256
  ["capnp-rpc.dev" "git+https://github.com/talex5/capnp-rpc.git#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d"]
  ["capnp-rpc-lwt.dev" "git+https://github.com/talex5/capnp-rpc.git#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d"]
  ["capnp-rpc-net.dev" "git+https://github.com/talex5/capnp-rpc.git#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d"]
  ["capnp-rpc-unix.dev" "git+https://github.com/talex5/capnp-rpc.git#c06e767b8a4ec5a87a07e62958cdb55d0d59c59d"]
]